Port Sheets kde4_add_unit_test -> ecm_add_test, with convenience macros

--- a/sheets/tests/CMakeLists.txt
+++ b/sheets/tests/CMakeLists.txt
@@ -1,178 +1,219 @@
 set( EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_BINARY_DIR} )
 include_directories( ${CMAKE_SOURCE_DIR}/sheets  ${EIGEN3_INCLUDE_DIR} ${KOMAIN_INCLUDES} )
 
+# call: sheets_add_unit_test(<test-name> <sources> LINK_LIBRARIES <library> [<library> [...]] [GUI])
+macro(SHEETS_ADD_UNIT_TEST _TEST_NAME)
+    ecm_add_test( ${ARGN}
+        TEST_NAME "${_TEST_NAME}"
+        NAME_PREFIX "sheets-"
+    )
+endmacro()
+
 ########### Core Functionality ###############
 
-set(TestCell_SRCS TestCell.cpp)
-kde4_add_unit_test(TestCell TESTNAME sheets-Cell ${TestCell_SRCS})
-target_link_libraries(TestCell calligrasheetscommon Qt5::Test)
+sheets_add_unit_test(Cell
+    TestCell.cpp
+    LINK_LIBRARIES calligrasheetscommon Qt5::Test
+)
 
 ########### next target ###############
 
-set(TestCellStorage_SRCS TestCellStorage.cpp)
-kde4_add_unit_test(TestCellStorage TESTNAME sheets-CellStorage  ${TestCellStorage_SRCS})
-target_link_libraries(TestCellStorage calligrasheetscommon Qt5::Test)
+sheets_add_unit_test(CellStorage
+    TestCellStorage.cpp
+    LINK_LIBRARIES calligrasheetscommon Qt5::Test
+)
 
 ########### next target ###############
 
-set(TestDependencies_SRCS TestDependencies.cpp)
-kde4_add_unit_test(TestDependencies TESTNAME sheets-Dependencies ${TestDependencies_SRCS})
-target_link_libraries(TestDependencies calligrasheetscommon Qt5::Test)
+sheets_add_unit_test(Dependencies
+    TestDependencies.cpp
+    LINK_LIBRARIES calligrasheetscommon Qt5::Test
+)
 
 ########### next target ###############
 
-set(TestFormula_SRCS TestFormula.cpp)
-kde4_add_unit_test(TestFormula TESTNAME sheets-Formula  ${TestFormula_SRCS})
-target_link_libraries(TestFormula calligrasheetscommon Qt5::Test)
+sheets_add_unit_test(Formula
+    TestFormula.cpp
+    LINK_LIBRARIES calligrasheetscommon Qt5::Test
+)
 
 ########### next target ###############
 
-set(TestUtil_SRCS TestUtil.cpp)
-kde4_add_unit_test(TestUtil TESTNAME sheets-Util  ${TestUtil_SRCS})
-target_link_libraries(TestUtil calligrasheetscommon Qt5::Test)
+sheets_add_unit_test(Util
+    TestUtil.cpp
+    LINK_LIBRARIES calligrasheetscommon Qt5::Test
+)
 
 ########### next target ###############
 
-set(TestOpenFormula_SRCS TestOpenFormula.cpp)
-kde4_add_unit_test(TestOpenFormula TESTNAME sheets-OpenFormula  ${TestOpenFormula_SRCS})
-target_link_libraries(TestOpenFormula calligrasheetscommon Qt5::Test)
+sheets_add_unit_test(OpenFormula
+    TestOpenFormula.cpp
+    LINK_LIBRARIES calligrasheetscommon Qt5::Test
+)
 
 ########### next target ###############
 
-set(TestPointStorage_SRCS TestPointStorage.cpp)
-kde4_add_unit_test(TestPointStorage TESTNAME sheets-PointStorage  ${TestPointStorage_SRCS})
-target_link_libraries(TestPointStorage calligrasheetscommon Qt5::Test)
+sheets_add_unit_test(PointStorage
+    TestPointStorage.cpp
+    LINK_LIBRARIES calligrasheetscommon Qt5::Test
+)
 
 ########### next target ###############
 
-set(TestRegion_SRCS TestRegion.cpp)
-kde4_add_unit_test(TestRegion TESTNAME sheets-Region  ${TestRegion_SRCS})
-target_link_libraries(TestRegion calligrasheetscommon Qt5::Test)
+sheets_add_unit_test(Region
+    TestRegion.cpp
+    LINK_LIBRARIES calligrasheetscommon Qt5::Test
+)
 
 ########### next target ###############
 
-set(TestRTree_SRCS TestRTree.cpp)
-kde4_add_unit_test(TestRTree TESTNAME sheets-RTree  ${TestRTree_SRCS})
-target_link_libraries(TestRTree KF5::KDELibs4Support Qt5::Test)
+sheets_add_unit_test(RTree
+    TestRTree.cpp
+    LINK_LIBRARIES calligrasheetscommon KF5::KDELibs4Support Qt5::Test
+)
 
 ########### next target ###############
 
-set(TestSort_SRCS TestSort.cpp)
-kde4_add_unit_test(TestSort TESTNAME sheets-Sort ${TestSort_SRCS})
-target_link_libraries(TestSort calligrasheetscommon Qt5::Test)
+sheets_add_unit_test(Sort
+    TestSort.cpp
+    LINK_LIBRARIES calligrasheetscommon Qt5::Test
+)
 
 ########### next target ###############
 
-set(TestSelection_SRCS TestSelection.cpp)
-kde4_add_unit_test(TestSelection TESTNAME sheets-Selection ${TestSelection_SRCS})
-target_link_libraries(TestSelection calligrasheetscommon Qt5::Test)
+sheets_add_unit_test(Selection
+    TestSelection.cpp
+    LINK_LIBRARIES calligrasheetscommon Qt5::Test
+)
 
 ########### next target ###############
 
-set(TestValue_SRCS TestValue.cpp)
-kde4_add_unit_test(TestValue TESTNAME sheets-Value  ${TestValue_SRCS})
-target_link_libraries(TestValue calligrasheetscommon Qt5::Test)
+sheets_add_unit_test(Value
+    TestValue.cpp
+    LINK_LIBRARIES calligrasheetscommon Qt5::Test
+)
 
 ########### next target ###############
 
-set(TestStyleStorage_SRCS TestStyleStorage.cpp)
-kde4_add_unit_test(TestStyleStorage TESTNAME sheets-StyleStorage ${TestStyleStorage_SRCS})
-target_link_libraries(TestStyleStorage calligrasheetscommon Qt5::Test)
+sheets_add_unit_test(StyleStorage
+    TestStyleStorage.cpp
+    LINK_LIBRARIES calligrasheetscommon Qt5::Test
+)
 
 
 ########### Function tests ###############
 
-set(TestBitopsFunctions_SRCS TestBitopsFunctions.cpp)
-kde4_add_unit_test(TestBitopsFunctions TESTNAME sheets-BitopsFunctions  ${TestBitopsFunctions_SRCS})
-target_link_libraries(TestBitopsFunctions calligrasheetscommon Qt5::Test)
+sheets_add_unit_test(BitopsFunctions
+    TestBitopsFunctions.cpp
+    LINK_LIBRARIES calligrasheetscommon Qt5::Test
+)
 
 ########### next target ###############
 
-set(TestDatabaseFunctions_SRCS TestDatabaseFunctions.cpp)
-kde4_add_unit_test(TestDatabaseFunctions TESTNAME sheets-DatabaseFunctions  ${TestDatabaseFunctions_SRCS})
-target_link_libraries(TestDatabaseFunctions calligrasheetscommon Qt5::Test)
+sheets_add_unit_test(DatabaseFunctions
+    TestDatabaseFunctions.cpp
+    LINK_LIBRARIES calligrasheetscommon Qt5::Test
+)
 
 ########### target TestDatetimeFunctions ###############
 
-set(TestDatetimeFunctions_SRCS TestDatetimeFunctions.cpp)
-kde4_add_unit_test(TestDatetimeFunctions TESTNAME sheets-DatetimeFunctions  ${TestDatetimeFunctions_SRCS})
-target_link_libraries(TestDatetimeFunctions calligrasheetscommon Qt5::Test)
+sheets_add_unit_test(DatetimeFunctions
+    TestDatetimeFunctions.cpp
+    LINK_LIBRARIES calligrasheetscommon Qt5::Test
+)
 
 ########### next target ###############
 
-set(TestEngineeringFunctions_SRCS TestEngineeringFunctions.cpp)
-kde4_add_unit_test(TestEngineeringFunctions TESTNAME sheets-EngineeringFunctions  ${TestEngineeringFunctions_SRCS})
-target_link_libraries(TestEngineeringFunctions calligrasheetscommon Qt5::Test)
+sheets_add_unit_test(EngineeringFunctions
+    TestEngineeringFunctions.cpp
+    LINK_LIBRARIES calligrasheetscommon Qt5::Test
+)
 
 ########### next target ###############
 
-set(TestFinancialFunctions_SRCS TestFinancialFunctions.cpp)
-kde4_add_unit_test(TestFinancialFunctions TESTNAME sheets-FinancialFunctions  ${TestFinancialFunctions_SRCS})
-target_link_libraries(TestFinancialFunctions calligrasheetscommon Qt5::Test)
+sheets_add_unit_test(FinancialFunctions
+    TestFinancialFunctions.cpp
+    LINK_LIBRARIES calligrasheetscommon Qt5::Test
+)
 
 ########### next target ###############
 
-set(TestInformationFunctions_SRCS TestInformationFunctions.cpp)
-kde4_add_unit_test(TestInformationFunctions TESTNAME sheets-InformationFunctions  ${TestInformationFunctions_SRCS})
-target_link_libraries(TestInformationFunctions calligrasheetscommon Qt5::Test)
+sheets_add_unit_test(InformationFunctions
+    TestInformationFunctions.cpp
+    LINK_LIBRARIES calligrasheetscommon Qt5::Test
+)
 
 ########### next target ###############
 
-set(TestLogicFunctions_SRCS TestLogicFunctions.cpp)
-kde4_add_unit_test(TestLogicFunctions TESTNAME sheets-LogicFunctions  ${TestLogicFunctions_SRCS})
-target_link_libraries(TestLogicFunctions calligrasheetscommon Qt5::Test)
+sheets_add_unit_test(LogicFunctions
+    TestLogicFunctions.cpp
+    LINK_LIBRARIES calligrasheetscommon Qt5::Test
+)
 
 ########### next target ###############
 
-set(TestMathFunctions_SRCS TestMathFunctions.cpp)
-kde4_add_unit_test(TestMathFunctions TESTNAME sheets-MathFunctions  ${TestMathFunctions_SRCS})
-target_link_libraries(TestMathFunctions calligrasheetscommon Qt5::Test)
+sheets_add_unit_test(MathFunctions
+    TestMathFunctions.cpp
+    LINK_LIBRARIES calligrasheetscommon Qt5::Test
+)
 
 ########### next target ###############
 
-set(TestStatisticalFunctions_SRCS TestStatisticalFunctions.cpp)
-kde4_add_unit_test(TestStatisticalFunctions TESTNAME sheets-StatisticalFunctions  ${TestStatisticalFunctions_SRCS})
-target_link_libraries(TestStatisticalFunctions calligrasheetscommon Qt5::Test)
+sheets_add_unit_test(StatisticalFunctions
+    TestStatisticalFunctions.cpp
+    LINK_LIBRARIES calligrasheetscommon Qt5::Test
+)
 
 ########### next target ###############
 
-set(TestTextFunctions_SRCS TestTextFunctions.cpp)
-kde4_add_unit_test(TestTextFunctions TESTNAME sheets-TextFunctions  ${TestTextFunctions_SRCS})
-target_link_libraries(TestTextFunctions calligrasheetscommon Qt5::Test)
+sheets_add_unit_test(TextFunctions
+    TestTextFunctions.cpp
+    LINK_LIBRARIES calligrasheetscommon Qt5::Test
+)
 
 ########### next target ###############
 
-set(TestTrigFunctions_SRCS TestTrigFunctions.cpp)
-kde4_add_unit_test(TestTrigFunctions TESTNAME sheets-TrigFunctions  ${TestTrigFunctions_SRCS})
-target_link_libraries(TestTrigFunctions calligrasheetscommon Qt5::Test)
+sheets_add_unit_test(TrigFunctions
+    TestTrigFunctions.cpp
+    LINK_LIBRARIES calligrasheetscommon Qt5::Test
+)
+
+# the next tests had this line:
+# set_target_properties(TestValueFormatter PROPERTIES COMPILE_FLAGS "-DCALLIGRA_SHEETS_UNIT_TEST")
+# but ecm_add_test has no official support for injecting properties or getting the target (ECM v5.17)
+# For now just set and unset globally:
+add_definitions("-DCALLIGRA_SHEETS_UNIT_TEST")
 
 ########### next target ###############
 
-set(TestValueFormatter_SRCS TestValueFormatter.cpp)
-kde4_add_unit_test(TestValueFormatter TESTNAME sheets-ValueFormatter  ${TestValueFormatter_SRCS})
-set_target_properties(TestValueFormatter PROPERTIES COMPILE_FLAGS "-DCALLIGRA_SHEETS_UNIT_TEST")
-target_link_libraries(TestValueFormatter calligrasheetscommon Qt5::Test)
+sheets_add_unit_test(ValueFormatter
+    TestValueFormatter.cpp
+    LINK_LIBRARIES calligrasheetscommon Qt5::Test
+)
 
 ########### next target ###############
 
-set(TestValueConverter_SRCS TestValueConverter.cpp)
-kde4_add_unit_test(TestValueConverter TESTNAME sheets-ValueConverter ${TestValueConverter_SRCS})
-set_target_properties(TestValueConverter PROPERTIES COMPILE_FLAGS "-DCALLIGRA_SHEETS_UNIT_TEST")
-target_link_libraries(TestValueConverter calligrasheetscommon Qt5::Test)
+sheets_add_unit_test(ValueConverter
+    TestValueConverter.cpp
+    LINK_LIBRARIES calligrasheetscommon Qt5::Test
+)
 
 ########### next target ###############
 
-set(TestValueParser_SRCS TestValueParser.cpp)
-kde4_add_unit_test(TestValueParser TESTNAME sheets-ValueParser ${TestValueParser_SRCS})
-set_target_properties(TestValueParser PROPERTIES COMPILE_FLAGS "-DCALLIGRA_SHEETS_UNIT_TEST")
-target_link_libraries(TestValueParser calligrasheetscommon Qt5::Test)
+sheets_add_unit_test(ValueParser
+    TestValueParser.cpp
+    LINK_LIBRARIES calligrasheetscommon Qt5::Test
+)
 
 ########### next target ###############
 
-set(TestSheet_SRCS TestSheet.cpp)
-kde4_add_unit_test(TestSheet TESTNAME sheets-Sheet  ${TestSheet_SRCS})
-set_target_properties(TestSheet PROPERTIES COMPILE_FLAGS "-DCALLIGRA_SHEETS_UNIT_TEST")
-target_link_libraries(TestSheet calligrasheetscommon Qt5::Test)
+sheets_add_unit_test(Sheet
+    TestSheet.cpp
+    LINK_LIBRARIES calligrasheetscommon Qt5::Test
+)
+
+# see comment at respective add_definitions(...)
+remove_definitions("-DCALLIGRA_SHEETS_UNIT_TEST")
 
 ########### next target ###############
 
@@ -182,27 +223,31 @@ target_link_libraries(TestGraphicsView calligrasheetscommon)
 
 ########### next target ###############
 
-set(TestRowRepeatStorage_SRCS TestRowRepeatStorage.cpp)
-kde4_add_unit_test(TestRowRepeatStorage TESTNAME sheets-RowRepeatStorage ${TestRowRepeatStorage_SRCS})
-target_link_libraries(TestRowRepeatStorage calligrasheetscommon Qt5::Test)
+sheets_add_unit_test(RowRepeatStorage
+    TestRowRepeatStorage.cpp
+    LINK_LIBRARIES calligrasheetscommon Qt5::Test
+)
 
 ########### next target ###############
 
-set(TestRowFormatStorage_SRCS TestRowFormatStorage.cpp)
-kde4_add_unit_test(TestRowFormatStorage TESTNAME sheets-RowFormatStorage ${TestRowFormatStorage_SRCS})
-target_link_libraries(TestRowFormatStorage calligrasheetscommon Qt5::Test)
+sheets_add_unit_test(RowFormatStorage
+    TestRowFormatStorage.cpp
+    LINK_LIBRARIES calligrasheetscommon Qt5::Test
+)
 
 ########### next target ###############
 
-set(TestDatabaseFilter_SRCS TestDatabaseFilter.cpp)
-kde4_add_unit_test(TestDatabaseFilter TESTNAME sheets-Database-Filter ${TestDatabaseFilter_SRCS})
-target_link_libraries(TestDatabaseFilter calligrasheetsodf Qt5::Test)
+sheets_add_unit_test(DatabaseFilter
+    TestDatabaseFilter.cpp
+    LINK_LIBRARIES calligrasheetscommon Qt5::Test
+)
 
 ########### next target ###############
 
-set(TestPasteCommand_SRCS TestPasteCommand.cpp)
-kde4_add_unit_test(TestPasteCommand TESTNAME sheets-PasteCommand ${TestPasteCommand_SRCS})
-target_link_libraries(TestPasteCommand calligrasheetscommon Qt5::Test)
+sheets_add_unit_test(PasteCommand
+    TestPasteCommand.cpp
+    LINK_LIBRARIES calligrasheetscommon Qt5::Test
+)
 
 ########### Benchmarks ###############
 
