Port Words kde4_add_unit_test -> ecm_add_test, with convenience macros

--- a/words/part/tests/CMakeLists.txt
+++ b/words/part/tests/CMakeLists.txt
@@ -10,53 +10,78 @@ include_directories(${KOTEXT_INCLUDES}
 add_definitions(-DFILES_DATA_DIR="${CMAKE_CURRENT_SOURCE_DIR}/data/")
 add_definitions(-DFILES_OUTPUT_DIR="${CMAKE_CURRENT_BINARY_DIR}/")
 
-########### next target ###############
+# call: words_part_add_unit_test(<test-name> <sources> LINK_LIBRARIES <library> [<library> [...]] [GUI])
+macro(WORDS_PART_ADD_UNIT_TEST _TEST_NAME)
+    ecm_add_test( ${ARGN}
+        TEST_NAME "${_TEST_NAME}"
+        NAME_PREFIX "words-part-"
+    )
+endmacro()
 
-#set(TestPageManager_test_SRCS TestPageManager.cpp)
-#kde4_add_unit_test(TestPageManager TESTNAME words-part-TestPageManager  ${TestPageManager_test_SRCS})
-#target_link_libraries(TestPageManager wordsprivate Qt5::Test)
-
-########### next target ###############
-
-set(TestClipToPage_test_SRCS TestClipToPage.cpp)
-kde4_add_unit_test(TestClipToPage TESTNAME words-part-TestClipToPage  ${TestClipToPage_test_SRCS})
-target_link_libraries(TestClipToPage wordsprivate Qt5::Test)
-
-########### next target ###############
-
-#set(TestViewMode_test_SRCS TestViewMode.cpp)
-#kde4_add_unit_test(TestViewMode TESTNAME words-part-TestViewMode  ${TestViewMode_test_SRCS})
-#target_link_libraries(TestViewMode wordsprivate Qt5::Test)
+# call: words_part_frame_add_unit_test(<test-name> <sources> LINK_LIBRARIES <library> [<library> [...]] [GUI])
+macro(WORDS_PART_FRAME_ADD_UNIT_TEST _TEST_NAME)
+    ecm_add_test( ${ARGN}
+        TEST_NAME "${_TEST_NAME}"
+        NAME_PREFIX "words-part-frame-"
+    )
+endmacro()
 
 ########### next target ###############
 
-#set(TestPageTextInfo_test_SRCS TestPageTextInfo.cpp)
-#kde4_add_unit_test(TestPageTextInfo TESTNAME words-part-TestPageTextInfo  ${TestPageTextInfo_test_SRCS})
-#target_link_libraries(TestPageTextInfo wordsprivate Qt5::Test)
+# words_part_add_unit_test(TestPageManager
+#     TestPageManager.cpp
+#     LINK_LIBRARIES wordsprivate Qt5::Test
+# )
 
 ########### next target ###############
 
-#set(TestFrameLayout_test_SRCS TestFrameLayout.cpp)
-#kde4_add_unit_test(TestFrameLayout TESTNAME words-part-frame-TestFrameLayout  ${TestFrameLayout_test_SRCS})
-#target_link_libraries(TestFrameLayout wordsprivate Qt5::Test)
+words_part_add_unit_test(TestClipToPage
+    TestClipToPage.cpp
+    LINK_LIBRARIES wordsprivate Qt5::Test
+)
 
 ########### next target ###############
 
-#set(TestTextFrameSorting_test_SRCS TestTextFrameSorting.cpp)
-#kde4_add_unit_test(TestTextFrameSorting TESTNAME words-part-frame-TestTextFrameSorting  ${TestTextFrameSorting_test_SRCS})
-#target_link_libraries(TestTextFrameSorting wordsprivate Qt5::Test)
+# words_part_add_unit_test(TestViewMode
+#     TestViewMode.cpp
+#     LINK_LIBRARIES wordsprivate Qt5::Test
+# )
 
 ########### next target ###############
-#set(TestTextFrameManagement_test_SRCS TestTextFrameManagement.cpp)
-#kde4_add_unit_test(TestTextFrameManagement TESTNAME words-part-frame-TestTextFrameManagement  ${TestTextFrameManagement_test_SRCS})
-#target_link_libraries(TestTextFrameManagement wordsprivate Qt5::Test)
+
+# words_part_add_unit_test(TestPageTextInfo
+#     TestPageTextInfo.cpp
+#     LINK_LIBRARIES wordsprivate Qt5::Test
+# )
+
+########### next target ###############
+
+# words_part_frame_add_unit_test(TestFrameLayout
+#     TestFrameLayout.cpp
+#     LINK_LIBRARIES wordsprivate Qt5::Test
+# )
+
+########### next target ###############
+
+# words_part_frame_add_unit_test(TestTextFrameSorting
+#     TestTextFrameSorting.cpp
+#     LINK_LIBRARIES wordsprivate Qt5::Test
+# )
+
+########### next target ###############
+
+# words_part_frame_add_unit_test(TestTextFrameManagement
+#     TestTextFrameManagement.cpp
+#     LINK_LIBRARIES wordsprivate Qt5::Test
+# )
 
 ########### next target ###############
 
 if( SHOULD_BUILD_FEATURE_RDF )
-#  set(TestRdf_SRCS TestRdf.cpp )
-#  kde4_add_unit_test(TestRdf TESTNAME words-part-TestRdf ${TestRdf_SRCS})
-#  target_link_libraries(TestRdf wordsprivate Qt5::Test)
+# words_part_add_unit_test(TestRdf
+#     TestRdf.cpp
+#     LINK_LIBRARIES wordsprivate Qt5::Test
+# )
 endif()
 
 
