--- a/filters/stage/powerpoint/tests/CMakeLists.txt
+++ b/filters/stage/powerpoint/tests/CMakeLists.txt
@@ -1,5 +1,7 @@
 include_directories(${QT_INCLUDES} ${KOMAIN_INCLUDES} ${KOODF_INCLUDES} .. ../../../libmso)
 
-set(TestPPT_SRCS TestPPT.cpp )
-kde4_add_unit_test(TestPPT TESTNAME filters-powerpoint-PPT ${TestPPT_SRCS})
-target_link_libraries(TestPPT koodf ppttoodplib komain Qt5::Test)
+ecm_add_test( TestPPT.cpp
+    TEST_NAME "FormulaParser"
+    NAME_PREFIX "filter-ppt2odp-PPT"
+    LINK_LIBRARIES koodf ppttoodplib komain Qt5::Test
+)
