--- a/filters/stage/powerpoint/tests/CMakeLists.txt
+++ b/filters/stage/powerpoint/tests/CMakeLists.txt
@@ -1,7 +1,7 @@
 include_directories(${QT_INCLUDES} ${KOMAIN_INCLUDES} ${KOODF_INCLUDES} .. ../../../libmso)
 
 ecm_add_test( TestPPT.cpp
-    TEST_NAME "FormulaParser"
-    NAME_PREFIX "filter-ppt2odp-PPT"
+    TEST_NAME "PPT"
+    NAME_PREFIX "filter-ppt2odp-"
     LINK_LIBRARIES koodf ppttoodplib komain Qt5::Test
 )
