--- a/plugins/musicshape/core/tests/CMakeLists.txt
+++ b/plugins/musicshape/core/tests/CMakeLists.txt
@@ -1,6 +1,14 @@
 set( EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_BINARY_DIR} )
 include_directories( ${CMAKE_CURRENT_SOURCE_DIR}/..  )
 
+# call: musicshape_add_unit_test(<test-name> <sources> LINK_LIBRARIES <library> [<library> [...]] [GUI])
+macro(MUSICSHAPE_ADD_UNIT_TEST _TEST_NAME)
+    ecm_add_test( ${ARGN}
+        TEST_NAME "${_TEST_NAME}"
+        NAME_PREFIX "shapes-music-"
+    )
+endmacro()
+
 ########### next target ###############
 
 set(SheetTest_test_SRCS
@@ -23,8 +31,10 @@ set(SheetTest_test_SRCS
     ../Chord.cpp
 )
 
-kde4_add_unit_test(SheetTest TESTNAME shapes-musicshape-SheetTest ${SheetTest_test_SRCS})
-target_link_libraries(SheetTest Qt5::Test)
+musicshape_add_unit_test(SheetTest
+    ${SheetTest_test_SRCS}
+    LINK_LIBRARIES Qt5::Test
+)
 
 
 ########### next target ###############
@@ -49,8 +59,10 @@ set(VoiceBarTest_test_SRCS
     ../Chord.cpp
 )
 
-kde4_add_unit_test(VoiceBarTest TESTNAME shapes-musicshape-VoiceBarTest ${VoiceBarTest_test_SRCS})
-target_link_libraries(VoiceBarTest Qt5::Test)
+musicshape_add_unit_test(VoiceBarTest
+    ${VoiceBarTest_test_SRCS}
+    LINK_LIBRARIES Qt5::Test
+)
 
 ########### next target ###############
 
@@ -75,8 +87,7 @@ set(MusicXmlWriterTest_test_SRCS
     ../TimeSignature.cpp
 )
 
-kde4_add_unit_test(MusicXmlWriterTest TESTNAME shapes-musicshape-MusicXmlWriterTest ${MusicXmlWriterTest_test_SRCS})
-target_link_libraries(MusicXmlWriterTest koodf Qt5::Test)
-
-
-
+musicshape_add_unit_test(MusicXmlWriterTest
+    ${MusicXmlWriterTest_test_SRCS}
+    LINK_LIBRARIES koodf Qt5::Test
+)
