--- a/plugins/chartshape/tests/odf/template/CMakeLists.txt
+++ b/plugins/chartshape/tests/odf/template/CMakeLists.txt
@@ -1,3 +1,5 @@
 set( TestLoading_SRCS TestLoading.cpp ../TestLoadingBase.cpp ../../../ChartDocument.cpp )
-kde4_add_unit_test( TestLoading TESTNAME kchart-TestLoading-@@NAME@@ ${TestLoading_SRCS} )
-target_link_libraries( TestLoading  chartshapecore flake koodf komain Qt5::Test )
+chartshape_loading_add_unit_test(@@NAME@@
+    ${TestLoading_SRCS}
+    LINK_LIBRARIES chartshapecore flake koodf komain Qt5::Test
+)
