--- a/plugins/musicshape/tests/CMakeLists.txt
+++ b/plugins/musicshape/tests/CMakeLists.txt
@@ -27,5 +27,6 @@ set( musicwidgettest_SRCS
     ../MusicStyle.cpp
 )
 
-kde4_add_executable(musicwidgettest TEST ${musicwidgettest_SRCS})
+add_executable(musicwidgettest ${musicwidgettest_SRCS})
+ecm_mark_as_test(musicwidgettest)
 target_link_libraries(musicwidgettest Qt5::Widgets Qt5::Test Qt5::Core)
